# FiLotBotV2.0

./: .env.example  .replit  IMPLEMENTATION_STATUS.md  README.md  agent.py  bot.py  bot_data.db  config.py  main.py  models.py  pyproject.toml  simple_main.py
attached_assets/: FiLotMicroservice Client Integration Guide.txt  Prompt Creating Agentic Bot V2.txt  Prompt Creating Agentic Bot V2_1.txt
handlers/: callbacks.py  user_commands.py
modules/: action.py  decision.py  notification.py  perception.py
utils/: database.py  filot_client.py  raydium_client.py  risk_manager.py
